# pergen

./: .cursorrules  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ECC_USAGE_GUIDE.md  FUNCTIONS_EXPLANATIONS.md  HOWTOUSE.md  Makefile  README.md  TEST_RESULTS.md  comparison_from_original.md  current_status_for_agents.md  package-lock.json  package.json  patch_notes.md  playwright.config.ts  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  tsconfig.json  vitest.config.ts
backend/: app.py  app_factory.py  bgp_looking_glass.py  credential_store.py  find_leaf.py  logging_config.py  nat_lookup.py  parse_output.py  request_logging.py  route_map_analysis.py  transceiver_recovery_policy.py
backend/bgp_looking_glass/: __init__.py  http_client.py  normalize.py  peeringdb.py  ripestat.py  service.py
backend/blueprints/: __init__.py  auth_bp.py  bgp_bp.py  commands_bp.py  (+10 more)
scripts/: migrate_credentials_v1_to_v2.py
tests/: conftest.py  test_app_factory.py  test_auth_actor_pinning.py  test_auth_login_flow.py  test_auth_login_throttling.py  test_auth_session_fixation.py  test_bgp_bp_phase7.py  test_bgp_looking_glass.py  test_cli_backfill_report_actors.py  test_command_validator.py  test_commands_bp_phase4.py  test_config_classes.py  test_coverage_push.py  test_credential_migration.py  test_credential_repository.py  test_credential_store_instance_dir_env.py  test_credentials_bp_phase6.py  test_device_commands_bp_phase10.py  test_encryption_service.py  test_input_sanitizer.py  test_interface_recovery.py  test_interface_recovery_arista_enable.py  test_interface_recovery_bounce_delay.py  test_inventory_repository.py  test_inventory_writes_phase3.py  test_legacy_coverage_bgp_lg.py  test_legacy_coverage_find_leaf_nat.py  test_legacy_coverage_parse_output.py  test_legacy_coverage_route_map.py  test_legacy_coverage_runners.py  test_logging_config.py  test_network_lookup_bp_phase8.py  test_network_ops_bp_phase5.py  test_notepad_repository.py  test_parse_arista_interface_status.py  test_parse_cisco_interface_detailed.py  test_parse_output_shim.py  test_parser_engine.py  test_phase9_blueprints.py  test_report_repository.py  (+63 more)
(+272 files in other folders)
